[package]
name = "oxc-parser-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
color-eyre = "0.6.5"
ratatui = "0.30.0-alpha.5"
crossterm = { version = "0.29", features = ["event-stream"] }
tokio = { version = "1.46.1", features = ["full"] }
tokio-stream = "0.1.17"
futures = "0.3.31"
oxc = "0.77.1"
